команды на бэке

--- a/engine/templates/engine/game.htm
+++ b/engine/templates/engine/game.htm
@@ -38,12 +38,11 @@
 		}
 	};
 
-	data = {"id":2};
+	data = {"command":"exercise","id":1};
 	$.ajax({
 		method:'POST',
-
 		data:data,
-		url: 'http://127.0.0.1:5000/game/ajax_test/',
+		url: 'http://127.0.0.1:5000/game/command/',
 		dataType:'json',
 		success: function(data){
 			var game = new TanEngine(options);
