--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,21 +1,28 @@
 
-{% extends "base.html" %}
-
+{% extends "bootstrap/base.html" %}
+{% block title %}Вход{% endblock %}
 {% block content %}
-   <h1>Sign In</h1>
+<div class="container">
+ <div class="row">
+
+ <div class="col-md-offset-3 col-md-6">
+   <h1>Войти в игру</h1>
       <p>Впервые у нас? <a href="{{ url_for('register') }}">Кликни для регестрации!</a></p>
    <form action="" method="post" novalidate>
        {{ form.hidden_tag() }}
-       <p>
+       <div>
            {{ form.username.label }}<br>
            {{ form.username(size=32) }}
-       </p>
-       <p>
+       </div>
+       <div>
            {{ form.password.label }}<br>
            {{ form.password(size=32) }}
-       </p>
-         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
-       <p>{{ form.submit() }}</p>
+       </div>
+         <div>{{ form.remember_me() }} {{ form.remember_me.label }}</div>
+       <div>{{ form.submit() }}</div>
    </form>
 
+</div>
+</div>
+</div>
 {% endblock %}
