--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,36 +1,46 @@
-{% extends "base.html" %}
+{% extends "bootstrap/base.html" %}
+
+{% block title %}Регистрация{% endblock %}
 {% block content %}
-    <h1>Register</h1>
+<div class="container">
+ <div class="row">
+
+ <div class="col-md-offset-3 col-md-6">
+    <h1 ">Регистрация</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
-        <p>
+        <div>
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}<br>
             {% for error in form.username.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
-        </p>
-        <p>
+        </div>
+        <div>
             {{ form.email.label }}<br>
-            {{ form.email(size=64) }}<br>
+            {{ form.email(size=32) }}<br>
             {% for error in form.email.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
-        </p>
-        <p>
+        </div>
+        <div>
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}<br>
             {% for error in form.password.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
-        </p>
-        <p>
+        </div>
+        <div>
             {{ form.password2.label }}<br>
             {{ form.password2(size=32) }}<br>
             {% for error in form.password2.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
+        </div>
+        <div class = "mt-3" >{{ form.submit() }}</div>
     </form>
+
+  </div>
+  </div>
+</div>
 {% endblock %}
