--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -5,6 +6,7 @@
     <title></title>
   </head>
   <body>
+    {% include 'code_palette.html' %}
     <div>
         <a href="{{ url_for('index') }}">На главную</a>
         <a href="{{ url_for('game_view') }}">В игру</a>
