--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -6,7 +6,7 @@
  <div class="row">
 
  <div class="col-md-offset-3 col-md-6">
-    <h1 ">Регистрация</h1>
+    <h1>Регистрация</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <div>
