new token and res

--- a/engine/templates/engine/game.htm
+++ b/engine/templates/engine/game.htm
@@ -38,7 +38,7 @@
 		}
 	};
 
-	data = {"command":"exercise","id":1};
+	data = {"command":"scene","id":2};
 	$.ajax({
 		method:'POST',
 		data:data,
