Добавлена отправка решения в модальное окно.

--- a/engine/templates/engine/code_palette.html
+++ b/engine/templates/engine/code_palette.html
@@ -13,6 +13,8 @@
         <hr/>
         <div id="code-editor" style="height: 500px;">
         </div>
+        <hr/>
+        <div id = "code-results"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" id="code-send">Отправить</button>
