Украшательства для вывода кода.

--- a/engine/templates/engine/code_palette.html
+++ b/engine/templates/engine/code_palette.html
@@ -1,20 +1,19 @@
 
 <div id="code" class="modal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content bg-dark">
+    <div class="modal-content bg-dark text-light">
       <div class="modal-header">
-        <h5 class="modal-title" id="code-name"></h5>
+        <h3 class="modal-title" id="code-name"></h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body ">
         <p id="code-ex"></p>
-        <hr/>
+        <hr class="bg-light"/>
         <div id="code-editor" style="height: 500px;">
         </div>
-        <hr/>
-        <div id = "code-results"></div>
+                <div id = "code-results"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" id="code-send">Отправить</button>
