--- a/engine/static/tan_engine/css/tan_engine.css
+++ b/engine/static/tan_engine/css/tan_engine.css
@@ -4,7 +4,9 @@
   border: 4px double black;
   border-radius: 30px;
 }
-
+body{
+	font-size: 12pt;
+}
 .bubble{
 	margin-left:auto;
 	margin-right:auto;
