--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,28 +1,34 @@
 
 {% extends "bootstrap/base.html" %}
 {% block title %}Вход{% endblock %}
+{% block head %}
+{{super()}}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="{{ url_for('engine.static', filename='tan_engine/css/main.css') }}">
+{% endblock %}
+
 {% block content %}
-<div class="container">
- <div class="row">
-
- <div class="col-md-offset-3 col-md-6">
-   <h1>Войти в игру</h1>
+<div class="center-block d-flex justify-content-center">
+   <div class = "card align-self-center">
+      <div class="card-header">
+        <h3>Войти в игру</h3>
+      </div>
+     <div class="card-body">
       <p>Впервые у нас? <a href="{{ url_for('register') }}">Кликни для регестрации!</a></p>
-   <form action="" method="post" novalidate>
-       {{ form.hidden_tag() }}
-       <div>
-           {{ form.username.label }}<br>
-           {{ form.username(size=32) }}
-       </div>
-       <div>
-           {{ form.password.label }}<br>
-           {{ form.password(size=32) }}
-       </div>
-         <div>{{ form.remember_me() }} {{ form.remember_me.label }}</div>
-       <div>{{ form.submit() }}</div>
-   </form>
-
-</div>
-</div>
+     <form action="" method="post" novalidate>
+         {{ form.hidden_tag() }}
+         <div class ="form-group">
+             {{ form.username.label(class_="label text-dark") }}<br>
+             {{ form.username(size=32, class_="form-control") }}
+         </div>
+         <div class ="form-group">
+             {{ form.password.label(class_="label text-dark") }}<br>
+             {{ form.password(size=32, class_="form-control") }}
+         </div>
+           <div>{{ form.remember_me() }} {{ form.remember_me.label(class_="label text-dark") }}</div>
+         <div>{{ form.submit(class_="btn btn-success") }}</div>
+     </form>
+   </div>
+  </div>
 </div>
 {% endblock %}
