--- a/engine/templates/engine/code_palette.html
+++ b/engine/templates/engine/code_palette.html
@@ -1,6 +1,6 @@
 
 <div id="code" class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-lg" role="document">
+  <div class="modal-dialog modal-lg w-100" role="document">
     <div class="modal-content bg-dark text-light">
       <div class="modal-header">
         <h3 class="modal-title" id="code-name"></h3>
@@ -13,9 +13,14 @@
         <hr class="bg-light"/>
         <div id="code-editor" style="height: 500px;">
         </div>
-                <div id = "code-results"></div>
+        <div id = "code-results"></div>
       </div>
-      <div class="modal-footer">
+      <div id = "code-progress" class="modal-footer p-0">
+        <div class="progress" style="width: 100%; height: 20px">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+        </div>
+      </div>
+      <div id = "code-buttons" class="modal-footer">
         <button type="button" class="btn btn-primary" id="code-send">Отправить</button>
         <button type="button" class="btn btn-secondary" id="code-skip" data-dismiss="modal">Пропустить</button>
       </div>
