--- a/engine/templates/engine/game.htm
+++ b/engine/templates/engine/game.htm
@@ -80,10 +80,12 @@
 
 {% block content %}
 {% include "engine/code_palette.html" %}
-<div  class='screen'>
-	<canvas id = 'canvas' width="600" height="400"  class='screen'>
-	</canvas>
-</div>
 
+<div class="center-block d-flex justify-content-center">
+	<div  class='screen align-self-center'>
+		<canvas id = 'canvas' width="600" height="400"  class='screen'>
+		</canvas>
+	</div>
+</div>
 
 {% endblock %}
