--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -3,7 +3,7 @@
 {% block title %}Вход{% endblock %}
 {% block head %}
 {{super()}}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sketchy/bootstrap.min.css" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="{{ url_for('engine.static', filename='tan_engine/css/main.css') }}">
 {% endblock %}
 
@@ -25,7 +25,9 @@
              {{ form.password.label(class_="label text-dark") }}<br>
              {{ form.password(size=32, class_="form-control") }}
          </div>
-           <div>{{ form.remember_me() }} {{ form.remember_me.label(class_="label text-dark") }}</div>
+          <div class ="form-group pl-3 ml-3">
+            {{ form.remember_me() }} {{ form.remember_me.label(class_="label text-dark") }}
+          </div>
          <div>{{ form.submit(class_="btn btn-success") }}</div>
      </form>
    </div>
